--- a/Anamnese/appsettings.json
+++ b/Anamnese/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "server: localhost; database: anamnese; uid=root; pwd=''"
+        "DefaultConnection": "Server=localhost;Database=anamnese;Uid=root;Pwd='';"
     },
     "Logging": {
         "LogLevel": {
