--- a/Anamnese/Anamnese.csproj
+++ b/Anamnese/Anamnese.csproj
@@ -15,6 +15,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     <PackageReference Include="QuestPDF" Version="2024.7.3" />
+    <PackageReference Include="Refit" Version="7.2.1" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="7.2.1" />
+    <PackageReference Include="ViaCep" Version="4.1.511" />
   </ItemGroup>
 
 </Project>
